--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "keywords": ["xml", "html", "css", "jquery", "xslt"],
   "require" : {
     "php" : ">=5.3.0",
-    "masterminds/html5": "2.*"
+    "masterminds/html5": "2.*",
+    "phpunit/phpunit": "^5.7"
   },
   "autoload": {
     "psr-0": {"QueryPath": "src/"},
