--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   "require" : {
     "php" : ">=5.3.0",
     "masterminds/html5": "2.*",
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "psy/psysh": "@stable"
   },
   "autoload": {
     "psr-0": {"QueryPath": "src/"},
